<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPlusNeg"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_plusNegative"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn0"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_0"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlusNeg" />

    <Button
        android:id="@+id/btnDiv"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_div"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn0" />

    <Button
        android:id="@+id/btnEqual"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_equal"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:theme="@style/equalBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDiv" />

    <Button
        android:id="@+id/btn1"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_1"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlusNeg"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_2"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_3"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDiv"
        app:layout_constraintStart_toEndOf="@+id/btn2" />

    <Button
        android:id="@+id/btnPlus"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_plus"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        app:layout_constraintStart_toEndOf="@+id/btn3" />

    <Button
        android:id="@+id/btn4"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_4"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_5"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btn2"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn6"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_6"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn5" />

    <Button
        android:id="@+id/btnMin"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_neg"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintStart_toEndOf="@+id/btn6" />

    <Button
        android:id="@+id/btn7"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_7"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_8"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn9"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_9"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn8" />

    <Button
        android:id="@+id/btnMulti"
        android:onClick="onClick"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_style"
        android:text="@string/btn_multi"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMin"
        app:layout_constraintStart_toEndOf="@+id/btn9" />


    <TextView
        android:id="@+id/textPrevious"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        tools:text="245 + 5344" />

    <TextView
        android:id="@+id/textShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
        android:maxLength="20"
        android:paddingStart="30dp"
        android:textSize="40sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrevious"
        tools:text="24567" />


    <TextView
        android:id="@+id/textOperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPrevious"
        app:layout_constraintVertical_bias="0.101"
        tools:text="+" />

    <TextView
        android:onClick="onClick"
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="12dp"
        android:text="@string/btn_clear"
        android:textSize="38sp"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/btnMulti"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>